--- a/project_eco_find/Info.plist
+++ b/project_eco_find/Info.plist
@@ -14,6 +14,8 @@
 	<string>$(PRODUCT_NAME)</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Мы используем ваше местоположение, чтобы показывать вам пункты переработки и маршруты до них</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Приложению необходим доступ к камере, чтобы сканировать маркировки</string>
 	<key>CFBundlePackageType</key>
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
